--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.LoginApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.InsubriApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">#007161</item>
@@ -8,5 +8,5 @@
 
     </style>
 
-    <style name="Theme.LoginApp" parent="Base.Theme.LoginApp" />
+    <style name="Theme.InsubriApp" parent="Base.Theme.InsubriApp" />
 </resources>
