--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -19,47 +19,49 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.089" />
+        app:layout_constraintVertical_bias="0.042" />
 
-    <Button
-        android:id="@+id/buttonModificaDati"
+    <TextView
+        android:id="@+id/cognomeUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Modifica i dati"
+        android:layout_marginTop="4dp"
+        android:text="@string/caricamento"
+        android:textAlignment="center"
+        android:textColor="@color/verde"
         android:textSize="17dp"
-        android:textStyle="bold"
-        android:onClick="gotoChangeData"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.755" />
+        app:layout_constraintTop_toBottomOf="@+id/textCognome" />
 
-    <Button
-        android:id="@+id/button2"
+    <TextView
+        android:id="@+id/usernameUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Modifica la password"
+        android:layout_marginTop="4dp"
+        android:text="@string/caricamento"
+        android:textAlignment="center"
+        android:textColor="@color/verde"
         android:textSize="17dp"
-        android:textStyle="bold"
-        android:onClick="restorePassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonModificaDati" />
+        app:layout_constraintTop_toBottomOf="@+id/textUsername" />
 
-    <Button
-        android:id="@+id/buttonLogout"
-        android:layout_width="143dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:onClick="logout"
-        android:text="Logout"
-        android:textSize="17dp"
+    <TextView
+        android:id="@+id/textCognome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:text="@string/cognomeText"
+        android:textColor="@color/verde"
+        android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/nomeUser" />
 
     <TextView
         android:id="@+id/nomeUser"
@@ -75,24 +77,10 @@
         app:layout_constraintTop_toBottomOf="@+id/textNome" />
 
     <TextView
-        android:id="@+id/textUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/usernameText"
-        android:textColor="@color/verde"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cognomeUser" />
-
-    <TextView
         android:id="@+id/textEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="25dp"
         android:text="@string/emailText"
         android:textColor="@color/verde"
         android:textSize="25dp"
@@ -107,13 +95,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:maxLines="1"
         android:text="@string/caricamento"
         android:textAlignment="center"
         android:textColor="@color/verde"
         android:textSize="17dp"
-        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textEmail" />
 
@@ -127,51 +114,88 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.185" />
+        app:layout_constraintVertical_bias="0.137" />
 
     <TextView
-        android:id="@+id/usernameUser"
+        android:id="@+id/textUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="@string/caricamento"
-        android:textAlignment="center"
-        android:textColor="@color/verde"
-        android:textSize="17dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textUsername" />
-
-    <TextView
-        android:id="@+id/textCognome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/cognomeText"
+        android:layout_marginTop="25dp"
+        android:text="@string/usernameText"
         android:textColor="@color/verde"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nomeUser" />
+        app:layout_constraintTop_toBottomOf="@+id/cognomeUser" />
+
+    <Button
+        android:id="@+id/buttonModificaDati"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="gotoChangeData"
+        android:text="Modifica i dati"
+        android:textSize="17dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.778" />
+
+    <Button
+        android:id="@+id/buttonLogout"
+        android:layout_width="143dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
+        android:onClick="logout"
+        android:text="Logout"
+        android:textSize="17dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:onClick="restorePassword"
+        android:text="Modifica la password"
+        android:textSize="17dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonModificaDati" />
 
     <TextView
-        android:id="@+id/cognomeUser"
+        android:id="@+id/textFacolta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:text="@string/facoltaText"
+        android:textColor="@color/verde"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailUser" />
+
+    <TextView
+        android:id="@+id/facoltaUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="@string/caricamento"
-        android:textAlignment="center"
+        android:text="Caricamento..."
         android:textColor="@color/verde"
         android:textSize="17dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textCognome" />
+        app:layout_constraintTop_toBottomOf="@+id/textFacolta" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
