--- a/app/src/main/res/layout/noticeboard_fragment.xml
+++ b/app/src/main/res/layout/noticeboard_fragment.xml
@@ -8,12 +8,13 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="374dp"
-        android:layout_height="531dp"
+        android:layout_width="369dp"
+        android:layout_height="619dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.857" />
 
     <TextView
         android:id="@+id/textView6"
