--- a/app/src/main/res/layout/noticeboard_fragment.xml
+++ b/app/src/main/res/layout/noticeboard_fragment.xml
@@ -38,7 +38,7 @@
         android:layout_marginBottom="16dp"
         android:background="@color/white"
         android:clickable="true"
-        app:backgroundTint="#009688"
+        app:backgroundTint="@color/verde"
         app:borderWidth="2dp"
         app:elevation="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
