Aggiunta dei campi Latitudine e Longitudine nei post della bacheca, così che quando viene creato un post salva la posizione corrente dell'utente

--- a/app/src/main/res/layout/selectedpost_fragment.xml
+++ b/app/src/main/res/layout/selectedpost_fragment.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:text="Titolo"
         android:textColor="@color/verde"
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -21,15 +23,17 @@
 
     <TextView
         android:id="@+id/textDescrizione"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="393dp"
+        android:layout_height="321dp"
         android:text="Descrizione"
+        android:textAlignment="center"
         android:textColor="@color/verde"
+        android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.231" />
+        app:layout_constraintVertical_bias="0.312" />
 
     <TextView
         android:id="@+id/textAutore"
@@ -37,18 +41,18 @@
         android:layout_height="wrap_content"
         android:text="Autore"
         android:textColor="@color/verde"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.136" />
+        app:layout_constraintVertical_bias="0.128" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
         android:name="com.example.InsubriApp.MapsFragment"
-        android:layout_width="378dp"
-        android:layout_height="326dp"
+        android:layout_width="385dp"
+        android:layout_height="254dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
