--- a/app/src/main/res/layout/noticeboard_fragment.xml
+++ b/app/src/main/res/layout/noticeboard_fragment.xml
@@ -36,11 +36,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:background="@color/white"
         android:clickable="true"
         app:backgroundTint="@color/verde"
         app:borderWidth="2dp"
         app:elevation="12dp"
+        app:tint = "@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
