Fix bug chat. Fix del bug dell'orientamento della chat e dell'allignamento dei messaggi.

--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -49,6 +49,8 @@
         android:id="@+id/listView"
         android:layout_width="413dp"
         android:layout_height="575dp"
+        android:stackFromBottom="true"
+        android:transcriptMode="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
