--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -27,14 +27,12 @@
         android:id="@+id/listView"
         android:layout_width="396dp"
         android:layout_height="663dp"
-        android:layout_marginStart="20dp"
         android:layout_marginBottom="-20dp"
         android:divider="@null"
         android:stackFromBottom="true"
         android:transcriptMode="normal"
         app:layout_constraintBottom_toTopOf="@+id/editTextMessaggio"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.851"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nomeChat"
         app:layout_constraintVertical_bias="0.0" />
@@ -64,12 +62,11 @@
         android:background="@color/verde"
         android:clickable="true"
         app:backgroundTint="@color/verde"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextMessaggio"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.952"
+        app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.987"
+        app:layout_constraintTop_toTopOf="@+id/editTextMessaggio"
         app:srcCompat="@drawable/send_icon"
         app:tint="@color/white" />
 
