--- a/app/src/main/res/layout/selectedpost_fragment.xml
+++ b/app/src/main/res/layout/selectedpost_fragment.xml
@@ -62,4 +62,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDescrizione" />
 
+    <Button
+        android:id="@+id/eliminaPostButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="101dp"
+        android:text="Elimina post"
+        app:layout_constraintBottom_toTopOf="@+id/textDescrizione"
+        app:layout_constraintEnd_toStartOf="@+id/textTitolo"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
