Aggiunta adapter per post, ricerca ed elenco chat. Logo app modificato

--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -23,11 +23,13 @@
 
     <ListView
         android:id="@+id/chatList"
-        android:layout_width="412dp"
-        android:layout_height="592dp"
+        android:layout_width="391dp"
+        android:layout_height="588dp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.812" />
+        app:layout_constraintVertical_bias="0.727" />
 </androidx.constraintlayout.widget.ConstraintLayout>
