--- a/app/src/main/res/layout/selectedpost_fragment.xml
+++ b/app/src/main/res/layout/selectedpost_fragment.xml
@@ -19,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.037" />
+        app:layout_constraintVertical_bias="0.088" />
 
     <TextView
         android:id="@+id/textDescrizione"
@@ -62,20 +62,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDescrizione" />
 
-    <Button
+    <ImageButton
         android:id="@+id/eliminaPostButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="101dp"
-        android:text="Elimina post"
-        app:layout_constraintBottom_toTopOf="@+id/textDescrizione"
-        app:layout_constraintEnd_toStartOf="@+id/textTitolo"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/background_chat"
+        app:layout_constraintBottom_toTopOf="@+id/textTitolo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.043"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.923"
+        app:srcCompat="@drawable/bin_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
